Fix horizontal overflow: remove 100vw on section patterns

--- a/css/base.css
+++ b/css/base.css
@@ -262,9 +262,8 @@ h1, h2, h3 {
 #presentations::before {
   content: '';
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100vw;
+  left: 0;
+  right: 0;
   top: 0;
   bottom: 0;
   z-index: -1;
